tests/algorithms/x/Elixir/data_structures/stacks/infix_to_postfix_conversion.error
run: exit status 1
     error: invalid use of _. _ can only be used inside patterns to ignore values and cannot be used in expressions. Make sure you are inside a pattern or change it accordingly
     │
 219 │             {_, postfix, stack}
     │              ^
     │
     └─ /workspace/mochi/tests/algorithms/x/Elixir/data_structures/stacks/infix_to_postfix_conversion.exs:219:14: Main.infix_to_postfix/1

     warning: variable "i" is unused (there is a variable with the same name in the context, use the pin operator (^) to match on it or prefix this variable with underscore if it is not meant to be used)
     │
 218 │             i = i + 1
     │             ~
     │
     └─ /workspace/mochi/tests/algorithms/x/Elixir/data_structures/stacks/infix_to_postfix_conversion.exs:218:13: Main.infix_to_postfix/1

     warning: variable "stack" is unused (there is a variable with the same name in the context, use the pin operator (^) to match on it or prefix this variable with underscore if it is not meant to be used)
     │
 243 │       {postfix, stack} = try do
     │                 ~
     │
     └─ /workspace/mochi/tests/algorithms/x/Elixir/data_structures/stacks/infix_to_postfix_conversion.exs:243:17: Main.infix_to_postfix/1

** (CompileError) /workspace/mochi/tests/algorithms/x/Elixir/data_structures/stacks/infix_to_postfix_conversion.exs: cannot compile module Main (errors have been logged)

